--- a/.github/workflows/lin_release.yml
+++ b/.github/workflows/lin_release.yml
@@ -39,6 +39,7 @@ jobs:
 
             - name: Install SQLite3
               run: |
+                sudo apt-get remove --auto-remove sqlite3 libsqlite3-0
                 wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-amalgamation-$SQLITE_VERSION.zip
                 unzip sqlite-amalgamation-$SQLITE_VERSION.zip
                 cd sqlite-amalgamation-$SQLITE_VERSION
@@ -55,6 +56,7 @@ jobs:
                     -DSQLITE_ENABLE_RTREE
                 strip libsqlite3.so
                 sudo cp libsqlite3.so /usr/local/lib/
+                sudo cp *.h /usr/local/include/
             
             - name: Install Tcl
               run: sudo apt-get install -qq libtcl$TCL_VERSION tcl$TCL_VERSION-dev
