--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,6 +71,7 @@ jobs:
                     -DSQLITE_ENABLE_RTREE
                 strip libsqlite3.so
                 sudo cp libsqlite3.so /usr/local/lib/
+                sudo cp *.h /usr/local/include/
 
             - name: Install Tcl
               run: sudo apt-get install -qq libtcl$TCL_VERSION tcl$TCL_VERSION-dev
