--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -99,5 +99,5 @@ jobs:
             - name: Run tests
               working-directory: output/SQLiteStudio
               run: |
-                export LD_LIBRARY_PATH="./lib"
+                export LD_LIBRARY_PATH="./lib:/usr/local/lib/"
                 for f in tst_*; do ./$f; done
