--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,6 +61,7 @@ jobs:
                 gcc sqlite3.c -lpthread -ldl -lm -Os -fpic -shared -o libsqlite3.so \
                     -DSQLITE_ENABLE_UPDATE_DELETE_LIMIT \
                     -DSQLITE_ENABLE_DBSTAT_VTAB \
+                    -DSQLITE_ENABLE_BYTECODE_VTAB \
                     -DSQLITE_ENABLE_COLUMN_METADATA \
                     -DSQLITE_ENABLE_EXPLAIN_COMMENTS \
                     -DSQLITE_ENABLE_FTS3 \
