Fix workflow error by distinct Qt cache for different Qt version.

--- a/.github/workflows/lin_release.yml
+++ b/.github/workflows/lin_release.yml
@@ -21,7 +21,7 @@ jobs:
               uses: actions/cache@v1
               with:
                 path: ${{ github.workspace }}/../Qt
-                key: ${{ runner.os }}-Qt-Linux-Cache
+                key: ${{ runner.os }}-Qt-${{ env.QT_VERSION }}-Linux-Cache
                 
             - name: Install Qt
               uses: jurplel/install-qt-action@v2
