--- a/.github/workflows/mac_release.yml
+++ b/.github/workflows/mac_release.yml
@@ -29,7 +29,7 @@ jobs:
               uses: actions/cache@v1
               with:
                 path: ${{ github.workspace }}/../Qt
-                key: ${{ runner.os }}-Qt-Mac-Cache
+                key: ${{ runner.os }}-Qt-${{ env.QT_VERSION }}-Mac-Cache
                 
             - name: Install Qt
               uses: jurplel/install-qt-action@v2
