--- a/.github/workflows/lin_release.yml
+++ b/.github/workflows/lin_release.yml
@@ -58,7 +58,7 @@ jobs:
                 strip libsqlite3.so
                 sudo cp libsqlite3.so /usr/local/lib/
                 sudo cp *.h /usr/local/include/
-
+            
             - name: Install Tcl
               run: sudo apt-get install -qq libtcl$TCL_VERSION tcl$TCL_VERSION-dev
               
@@ -92,7 +92,7 @@ jobs:
               working-directory: ${{ env.PORTABLE_DIR }}
               run: |
                 export LD_LIBRARY_PATH="/usr/local/lib/"
-                sqlite3_lib=/usr/local/lib/libsqlite3.so.0.8.6
+                sqlite3_lib=/usr/local/lib/libsqlite3.so
                 sqlite3_lib_target=`ldd lib/libcoreSQLiteStudio.so | grep libsqlite | awk '{print $3;}'`
                 cp $sqlite3_lib lib/`basename $sqlite3_lib_target`
 
