--- a/.github/workflows/lin_release.yml
+++ b/.github/workflows/lin_release.yml
@@ -90,11 +90,7 @@ jobs:
 
             - name: Copy SQLite3 to portable dir
               working-directory: ${{ env.PORTABLE_DIR }}
-              run: |
-                export LD_LIBRARY_PATH="/usr/local/lib/"
-                sqlite3_lib=/usr/local/lib/libsqlite3.so
-                sqlite3_lib_target=`ldd lib/libcoreSQLiteStudio.so | grep libsqlite | awk '{print $3;}'`
-                cp $sqlite3_lib lib/`basename $sqlite3_lib_target`
+              run: cp /usr/local/lib/libsqlite3.so lib/
 
             - name: Copy Qt to portable dir
               working-directory: ${{ env.PORTABLE_DIR }}
