Fix Linux build workflow

--- a/.github/workflows/lin_release.yml
+++ b/.github/workflows/lin_release.yml
@@ -138,9 +138,9 @@ jobs:
             - name: Determine SQLiteStudio version
               working-directory: ${{ env.PORTABLE_DIR }}
               run: |
-                echo "ls -l lib/"
-                echo "ldd sqlitestudiocli"
-                echo "ldd lib/libsqlite3.so"
+                ls -l lib/
+                ldd sqlitestudiocli
+                ldd lib/libsqlite3.so
                 echo "SQLITESTUDIO_VERSION=$(./sqlitestudiocli --version | cut -f 2 -d ' ')" >> $GITHUB_ENV
 
             - name: Assemble portable package
