--- a/.github/workflows/lin_release.yml
+++ b/.github/workflows/lin_release.yml
@@ -39,7 +39,7 @@ jobs:
 
             - name: Install SQLite3
               run: |
-                sudo apt-get remove --auto-remove sqlite3 libsqlite3-0
+                sudo rm -f /usr/lib/libsqlite* /usr/local/lib/libsqlite* /usr/include/sqlite* /usr/local/include/sqlite*
                 wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-amalgamation-$SQLITE_VERSION.zip
                 unzip sqlite-amalgamation-$SQLITE_VERSION.zip
                 cd sqlite-amalgamation-$SQLITE_VERSION
@@ -56,7 +56,7 @@ jobs:
                     -DSQLITE_ENABLE_JSON1 \
                     -DSQLITE_ENABLE_RTREE
                 strip libsqlite3.so
-                sudo cp libsqlite3.so /usr/local/lib/
+                sudo cp -P libsqlite3.so* /usr/local/lib/
                 sudo cp *.h /usr/local/include/
             
             - name: Install Tcl
@@ -90,11 +90,7 @@ jobs:
 
             - name: Copy SQLite3 to portable dir
               working-directory: ${{ env.PORTABLE_DIR }}
-              run: |
-                export LD_LIBRARY_PATH="/usr/local/lib/"
-                sqlite3_lib=/usr/local/lib/libsqlite3.so
-                sqlite3_lib_target=`ldd lib/libcoreSQLiteStudio.so | grep libsqlite | awk '{print $3;}'`
-                cp $sqlite3_lib lib/`basename $sqlite3_lib_target`
+              run: cp -P /usr/local/lib/libsqlite3.so* lib/
 
             - name: Copy Qt to portable dir
               working-directory: ${{ env.PORTABLE_DIR }}
@@ -132,10 +128,12 @@ jobs:
             - name: Fix dependency paths
               working-directory: ${{ env.PORTABLE_DIR }}
               run: |
-                chrpath -k -r \$ORIGIN/../lib platforms/*.so imageformats/*.so iconengines/*.so printsupport/*.so platformthemes/*.so 2>&1 >/dev/null
-                chrpath -k -r \$ORIGIN/lib sqlitestudio 2>&1 >/dev/null
-                chrpath -k -r \$ORIGIN/lib sqlitestudiocli 2>&1 >/dev/null
-                chrpath -l platforms/*.so imageformats/*.so iconengines/*.so printsupport/*.so platformthemes/*.so
+                chrpath -k -r \$ORIGIN/../lib   platforms/*.so imageformats/*.so iconengines/*.so printsupport/*.so platformthemes/*.so plugins/*.so 2>&1 >/dev/null
+                chrpath -k -r \$ORIGIN          lib/libcoreSQLiteStudio.so lib/libguiSQLiteStudio.so 2>&1 >/dev/null
+                chrpath -k -r \$ORIGIN/lib      sqlitestudio 2>&1 >/dev/null
+                chrpath -k -r \$ORIGIN/lib      sqlitestudiocli 2>&1 >/dev/null
+                chrpath -l platforms/*.so imageformats/*.so iconengines/*.so printsupport/*.so platformthemes/*.so plugins/*.so
+                chrpath -l lib/libcoreSQLiteStudio.so lib/libguiSQLiteStudio.so
                 chrpath -l sqlitestudio
                 chrpath -l sqlitestudiocli
 
