--- a/.github/workflows/lin_release.yml
+++ b/.github/workflows/lin_release.yml
@@ -1,7 +1,5 @@
 env:
     QT_VERSION: '5.15.2'
-    SQLITE_VERSION: '3340100'
-    SQLITE_RELEASE_YEAR: '2021'
     TCL_VERSION: '8.6'
     PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
 
@@ -37,28 +35,6 @@ jobs:
               with:
                 ref: ${{ github.event.client_payload.branch }}
 
-            - name: Install SQLite3
-              run: |
-                sudo rm -f /usr/lib/libsqlite* /usr/local/lib/libsqlite* /usr/include/sqlite* /usr/local/include/sqlite* /usr/lib/x86_64-linux-gnu/libsqlite*
-                wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-amalgamation-$SQLITE_VERSION.zip
-                unzip sqlite-amalgamation-$SQLITE_VERSION.zip
-                cd sqlite-amalgamation-$SQLITE_VERSION
-                gcc sqlite3.c -lpthread -ldl -lm -Os -fpic -shared -o libsqlite3.so \
-                    -DSQLITE_ENABLE_UPDATE_DELETE_LIMIT \
-                    -DSQLITE_ENABLE_DBSTAT_VTAB \
-                    -DSQLITE_ENABLE_BYTECODE_VTAB \
-                    -DSQLITE_ENABLE_COLUMN_METADATA \
-                    -DSQLITE_ENABLE_EXPLAIN_COMMENTS \
-                    -DSQLITE_ENABLE_FTS3 \
-                    -DSQLITE_ENABLE_FTS4 \
-                    -DSQLITE_ENABLE_FTS5 \
-                    -DSQLITE_ENABLE_GEOPOLY \
-                    -DSQLITE_ENABLE_JSON1 \
-                    -DSQLITE_ENABLE_RTREE
-                strip libsqlite3.so
-                sudo cp -P libsqlite3.so* /usr/local/lib/
-                sudo cp *.h /usr/local/include/
-            
             - name: Install Tcl
               run: sudo apt-get install -qq libtcl$TCL_VERSION tcl$TCL_VERSION-dev
               
@@ -88,14 +64,11 @@ jobs:
                 mkdir portable
                 cp -R SQLiteStudio portable/
 
-            - name: Copy SQLite3 to portable dir
-              working-directory: ${{ env.PORTABLE_DIR }}
-              run: cp -P /usr/local/lib/libsqlite3.so* lib/
-
             - name: Copy Qt to portable dir
               working-directory: ${{ env.PORTABLE_DIR }}
               run: |
                 cp -P ${{ env.Qt5_Dir }}/lib/libQt5Core.so* lib/
+                cp -P ${{ env.Qt5_Dir }}/lib/libQt5DBus.so* lib/
                 cp -P ${{ env.Qt5_Dir }}/lib/libQt5Concurrent.so* lib/
                 cp -P ${{ env.Qt5_Dir }}/lib/libQt5Gui.so* lib/
                 cp -P ${{ env.Qt5_Dir }}/lib/libQt5Network.so* lib/
@@ -136,6 +109,7 @@ jobs:
                 chrpath -l lib/libcoreSQLiteStudio.so lib/libguiSQLiteStudio.so
                 chrpath -l sqlitestudio
                 chrpath -l sqlitestudiocli
+                strip lib/*.so sqlitestudio sqlitestudiocli platforms/*.so imageformats/*.so iconengines/*.so printsupport/*.so platformthemes/*.so plugins/*.so
 
             - name: Determine SQLiteStudio version
               working-directory: ${{ env.PORTABLE_DIR }}
