--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -76,5 +76,6 @@ jobs:
             - name: Run tests
               working-directory: output/SQLiteStudio
               run: |
+                export LD_LIBRARY_PATH="./lib"
                 ldd tst_tablemodifiertest
                 for f in tst_*; do ./$f; done
