--- a/.github/workflows/lin_release.yml
+++ b/.github/workflows/lin_release.yml
@@ -1,6 +1,8 @@
 env:
     QT_VERSION: '5.15.2'
     TCL_VERSION: '8.6'
+    SQLITE_VERSION: '3350400'
+    SQLITE_RELEASE_YEAR: '2021'
     PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
 
 name: Linux release build
@@ -35,6 +37,28 @@ jobs:
               with:
                 ref: ${{ github.event.client_payload.branch }}
 
+            - name: Install SQLite3
+              run: |
+                sudo rm -f /usr/lib/libsqlite* /usr/local/lib/libsqlite* /usr/include/sqlite* /usr/local/include/sqlite* /usr/lib/x86_64-linux-gnu/libsqlite*
+                wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-amalgamation-$SQLITE_VERSION.zip
+                unzip sqlite-amalgamation-$SQLITE_VERSION.zip
+                cd sqlite-amalgamation-$SQLITE_VERSION
+                gcc sqlite3.c -lpthread -ldl -lm -Os -fpic -shared -o libsqlite3.so \
+                    -DSQLITE_ENABLE_UPDATE_DELETE_LIMIT \
+                    -DSQLITE_ENABLE_DBSTAT_VTAB \
+                    -DSQLITE_ENABLE_BYTECODE_VTAB \
+                    -DSQLITE_ENABLE_COLUMN_METADATA \
+                    -DSQLITE_ENABLE_EXPLAIN_COMMENTS \
+                    -DSQLITE_ENABLE_FTS3 \
+                    -DSQLITE_ENABLE_FTS4 \
+                    -DSQLITE_ENABLE_FTS5 \
+                    -DSQLITE_ENABLE_GEOPOLY \
+                    -DSQLITE_ENABLE_JSON1 \
+                    -DSQLITE_ENABLE_RTREE
+                strip libsqlite3.so
+                sudo cp -P libsqlite3.so* /usr/local/lib/
+                sudo cp *.h /usr/local/include/
+
             - name: Install Tcl
               run: sudo apt-get install -qq libtcl$TCL_VERSION tcl$TCL_VERSION-dev
               
@@ -63,6 +87,10 @@ jobs:
               run: |
                 mkdir portable
                 cp -R SQLiteStudio portable/
+
+            - name: Copy SQLite3 to portable dir
+              working-directory: ${{ env.PORTABLE_DIR }}
+              run: cp -P /usr/local/lib/libsqlite3.so* lib/
 
             - name: Copy Qt to portable dir
               working-directory: ${{ env.PORTABLE_DIR }}
