--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -1,5 +1,7 @@
 env:
     QT_VERSION: '5.15.2'
+    SQLITE_VERSION: '3350400'
+    SQLITE_RELEASE_YEAR: '2021'
     QT_ARCH: 'win64_mingw81'
     MINGW_DIR: ../Qt/Tools/mingw810_64
     QT_BIN_DIR: ../Qt/5.15.2/mingw81_64/bin
@@ -56,6 +58,29 @@ jobs:
                 curl -L ${{ env.DEPS_URL }} --output ../win64_deps.zip
                 7z x -o".." ../win64_deps.zip
                 echo "../lib" >> $GITHUB_PATH
+ 
+            - name: Install SQLite3
+              shell: bash
+              run: |
+                cd ..
+                curl -L http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-amalgamation-$SQLITE_VERSION.zip --output sqlite-amalgamation-$SQLITE_VERSION.zip
+                7z x sqlite-amalgamation-$SQLITE_VERSION.zip
+                cd sqlite-amalgamation-$SQLITE_VERSION
+                gcc.exe sqlite3.c -Os -fpic -DWIN64 -m64 -I. -shared -o sqlite3.dll \
+                    -DSQLITE_ENABLE_UPDATE_DELETE_LIMIT \
+                    -DSQLITE_ENABLE_DBSTAT_VTAB \
+                    -DSQLITE_ENABLE_BYTECODE_VTAB \
+                    -DSQLITE_ENABLE_COLUMN_METADATA \
+                    -DSQLITE_ENABLE_EXPLAIN_COMMENTS \
+                    -DSQLITE_ENABLE_FTS3 \
+                    -DSQLITE_ENABLE_FTS4 \
+                    -DSQLITE_ENABLE_FTS5 \
+                    -DSQLITE_ENABLE_GEOPOLY \
+                    -DSQLITE_ENABLE_JSON1 \
+                    -DSQLITE_ENABLE_RTREE
+                cp -f sqlite3.dll ../lib/
+                cp -f sqlite3.h ../include/
+                cp -f sqlite3ext.h ../include/
 
             - name: Prepare output dir
               shell: bash
