--- a/.github/workflows/mac_release.yml
+++ b/.github/workflows/mac_release.yml
@@ -61,7 +61,8 @@ jobs:
                     -DSQLITE_ENABLE_FTS5 \
                     -DSQLITE_ENABLE_GEOPOLY \
                     -DSQLITE_ENABLE_JSON1 \
-                    -DSQLITE_ENABLE_RTREE
+                    -DSQLITE_ENABLE_RTREE \
+                    -DSQLITE_ENABLE_MATH_FUNCTIONS
                 sudo cp libsqlite3.0.dylib /usr/local/lib/
                 sudo ln -f -s /usr/local/lib/libsqlite3.0.dylib /usr/local/lib/libsqlite3.dylib
                 sudo cp *.h /usr/local/include/
