MacOS build workflow fix

--- a/.github/workflows/mac_release.yml
+++ b/.github/workflows/mac_release.yml
@@ -66,6 +66,7 @@ jobs:
                 sudo cp libsqlite3.0.dylib /usr/local/lib/
                 sudo ln -f -s /usr/local/lib/libsqlite3.0.dylib /usr/local/lib/libsqlite3.dylib
                 sudo cp *.h /usr/local/include/
+                echo "DYLD_LIBRARY_PATH=/usr/local/lib" >> $GITHUB_ENV
 
             - name: Prepare deps
               run: |
