Unit tests workflow update

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,7 @@ on:
             - '**.pro'
             - '**.pri'
             - '**.ui'
+            - '**.qrc'
             - '**/tests.yml'
 
 jobs:
