--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -3,6 +3,7 @@ env:
     SQLITE_VERSION: '3350500'
     SQLITE_RELEASE_YEAR: '2021'
     QT_ARCH: 'win64_mingw81'
+    pythonLocation: 'C:/hostedtoolcache/windows/python/3.9.4'
     MINGW_DIR: ../Qt/Tools/mingw810_64
     QT_BIN_DIR: ../Qt/5.15.2/mingw81_64/bin
     PORTABLE_DIR: output/portable/SQLiteStudio
@@ -81,7 +82,7 @@ jobs:
                 cp -f sqlite3.dll ../lib/
                 cp -f sqlite3.h ../include/
                 cp -f sqlite3ext.h ../include/
-
+                
             - name: Prepare output dir
               shell: bash
               run: mkdir output output/build output/build/Plugins
@@ -95,7 +96,7 @@ jobs:
             - name: Compile Plugins
               working-directory: output/build/Plugins
               run: |
-                qmake.exe CONFIG+=portable ..\..\..\Plugins
+                qmake.exe CONFIG+=portable "INCLUDEPATH+=$pythonLocation/include" "LIBS += -L$pythonLocation/include" ..\..\..\Plugins
                 mingw32-make.exe -j 2
               
             - name: Prepare portable dir
