Updated github actions workflow file.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -95,6 +95,7 @@ jobs:
             - name: Compile Plugins
               working-directory: output/build/Plugins
               run: |
+                fine $pythonLocation -iname Python.h
                 qmake CONFIG+=portable CONFIG+=debug DEFINES+=tests "INCLUDEPATH+=$pythonLocation/include" ../../../Plugins
                 make -j 2
 
