Updated github actions workflow file.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,6 +46,12 @@ jobs:
                 version: ${{ matrix.QT_VERSION }}
                 host: 'linux'
                 dir: '${{ github.workspace }}/..'
+                
+             - name: find python
+               run: |
+                 find $pythonLocation -name libpython
+                 ls -l $pythonLocation/lib
+                 sdfsgfh
 
             - name: Clone repo
               uses: actions/checkout@v2
