--- a/.github/workflows/mac_release.yml
+++ b/.github/workflows/mac_release.yml
@@ -85,7 +85,7 @@ jobs:
             - name: Compile Plugins
               working-directory: output/build/Plugins
               run: |
-                qmake CONFIG+=portable "INCLUDEPATH+=$pythonLocation/include/python3.9" ../../../Plugins
+                qmake CONFIG+=portable "INCLUDEPATH+=$pythonLocation/include/python3.9" "LIBS += -L$pythonLocation/lib" ../../../Plugins
                 make -j 2
               
             - name: Build packages
