Updated github actions workflow file.

--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -3,7 +3,7 @@ env:
     SQLITE_VERSION: '3350500'
     SQLITE_RELEASE_YEAR: '2021'
     QT_ARCH: 'win64_mingw81'
-    pythonLocation: 'C:/hostedtoolcache/windows/python/3.9.4'
+    pythonLocation: 'C:/hostedtoolcache/windows/python/3.9.4/x64'
     MINGW_DIR: ../Qt/Tools/mingw810_64
     QT_BIN_DIR: ../Qt/5.15.2/mingw81_64/bin
     PORTABLE_DIR: output/portable/SQLiteStudio
